capi.argo/infra/vault/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host('vault.capi.weebo.poc')
    services:
    - name: vault
      port: 8200
  tls:
    passthrough: true
